# django-fbv

./: .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  conftest.py  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: checks.yml  main.yml  publish.yml  python.yml
docs/source/: conf.py  decorators.md  index.md  middleware.md  views.md
fbv/: decorators.py  middleware.py  views.py
src/fbv/: decorators.py  middleware.py  views.py
tests/: models.py  urls.py  utils.py
tests/decorators/: test_render_html.py  test_render_json.py  test_render_view.py
tests/middlewares/: test_request_method_middleware.py
tests/templates/test/: template.html
tests/templates/test_render_html/: render_view_with_no_template.html
tests/templates/test_render_view/: render_view_with_no_template.html
tests/templates/tests/example/: three_segment_default.html
tests/views/: example.py  test_favicon.py  test_favicon_emoji.py  test_favicon_file.py  test_file.py  test_html_view.py  test_redirect_view.py
